--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -35,8 +35,9 @@ h1 {
 }
 
 .camera-view {
+    margin: 0;
     width: 100%;
-    height: calc(100% - 40px);
+    height: calc(100% - 55px);
 }
 
 .camera-capture-button {
@@ -55,16 +56,19 @@ h1 {
 }
 
 .camera-result-wrapper {
-    z-index: 2;
-    display: none;
-}
-
-.camera-result {
     position: fixed;
     left: 0;
     top: 50px;
     width: 100%;
     height: calc(100% - 100px);
+
+    z-index: 2;
+    display: none;
+}
+
+.camera-result {
+    width: 100%;
+    height: 100%;
 
     /*background-color: red;*/
 }
